--- a/README
+++ b/README
@@ -3,5 +3,19 @@
 ## Lorem Markdown
 Get random Markdown file from [Lorem Markdown](https://jaspervdj.be/lorem-markdownum/), and render it to PDF and HTML.
 
+### How to use
+
+TODO
+
 ## Mathgen Latex
 Generate random fake mathematics papers with [Mathgen](https://github.com/neldredge/mathgen) and render it to Markdown and PDF.
+
+### Prerequisites
+
+- pandoc
+- pandoc-crossref
+- mathgen
+
+### How to use
+
+TODO
